fix: change scrollbar thumb for better visibility

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -28,7 +28,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #08A78B;
+  background: #37D8A3;
   border-radius: 100px;
 }
 
